--- a/main.css
+++ b/main.css
@@ -1,17 +1,67 @@
 #cssmenu{
-    float: left;
+    background-color: white;
+}
+
+
+
+
+.dropbtn {
+    background-color: #dddddd;
+    color: black;
+    padding: 16px;
+    font-size: 16px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    border: none;
+    cursor: pointer;
+    text-decoration: none;
+  }
+
+.dropdown{
+    position: relative;
+    display: inline-block;
+}
+.dropdown-content{
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    min-width: 200px;
+    z-index: 1;
+}
+
+.dropdown-content a{
+    padding:12px 16px;
+    display:block;
+    color: black;
+    text-decoration: none;
+}
+
+.dropdown:hover .dropdown-content{
+    display: block;
+}
+
+.dropdown:hover {
+    background-color: #3e8e41;
 }
 
 #main{
-    background-color:#dddddd;
+    background-color:white; 
 }
 
+.main body{
+    background-color: white;
+}
+
+.carousel-active{
+    background-color: white;
+}
 .vsep{
     
         float: left;
         display:block;
         padding: 8px;
-        background-color: #dddddd;
+        background-color: white;
+        
         
     }
 .vsep>a>img
@@ -20,4 +70,10 @@
         height: 225px;
         object-fit:contain;
     }
+
+.vsep  > .title > .narrow{
+    font-size: 10px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
+}
 
