Add content on Discounts Adventure and format discount in css

--- a/main.css
+++ b/main.css
@@ -101,3 +101,15 @@
 
 }
 
+.vsep > .title > .discount{
+    
+    font-size: 14px;
+    font-weight: bold;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.vsep> .title > .discount > span{
+    border-radius: 5px;
+    background-color: red;
+}
+
