--- a/main.css
+++ b/main.css
@@ -13,6 +13,10 @@
     padding-left: 15%
 }
 
+.name{
+    font-weight: bold;
+}
+
 
 
 .dropbtn {
@@ -112,4 +116,5 @@
     border-radius: 5px;
     background-color: red;
 }
+
 
